--- a/akka-distributed-data/src/main/resources/reference.conf
+++ b/akka-distributed-data/src/main/resources/reference.conf
@@ -72,6 +72,12 @@ akka.cluster.distributed-data {
       #    and its remote port.
       # 2. Otherwise the path is used as is, as a relative or absolute path to
       #    a directory.
+      #
+      # When running in production you may want to configure this to a specific
+      # path (alt 2), since the default directory contains the remote port of the
+      # actor system to make the name unique. If using a dynamically assigned 
+      # port (0) it will be different each time and the previously stored data 
+      # will not be loaded.
       dir = "ddata"
       
       # Size in bytes of the memory mapped file.
