WIP on making a actorref serializer

--- a/akka-typed/src/main/resources/reference.conf
+++ b/akka-typed/src/main/resources/reference.conf
@@ -28,3 +28,18 @@ akka.typed {
   #
   library-extensions = ${?akka.library-extensions} []
 }
+
+# TODO: move these out somewhere else when doing #23632
+akka.actor {
+  serializers {
+    typed-misc = "akka.typed.cluster.internal.MiscMessageSerializer"
+  }
+  serialization-identifiers {
+    "akka.typed.cluster.internal.MiscMessageSerializer" = 24
+  }
+  serialization-bindings {
+    "akka.typed.ActorRef" = typed-misc
+    "akka.typed.internal.adapter.ActorRefAdapter" = typed-misc
+  }
+
+}
