--- a/akka-actor-typed/src/main/resources/reference.conf
+++ b/akka-actor-typed/src/main/resources/reference.conf
@@ -36,6 +36,6 @@ akka.actor {
   serialization-bindings {
     "akka.actor.typed.ActorRef" = typed-misc
     "akka.actor.typed.internal.adapter.ActorRefAdapter" = typed-misc
-    "akka.actor.typed.internal.receptionist.ReceptionistImpl$DefaultServiceKey" = service-key
+    "akka.actor.typed.internal.receptionist.DefaultServiceKey" = service-key
   }
 }
